tests/errors/init_state/move_and_drop/call_arg_read_of_uninit.sim

        extern fn takes_num(a: i64);
        fn f() {
          x: i64;
          entry:
            call takes_num(copy x);
            return
        }
        