tests/errors/init_state/move_and_drop/call_arg_read_of_uninit.err.expected
error: at 6:13: [INIT-UseBeforeInit] In function 'f', block 'entry': variable 'x' is used before initialization
   |
 6 |             call takes_num(copy x);
   |             ^^^^^^^^^^^^^^^^^^^^^^
